# meetup-reminder-bot

./: .gitignore  .terraform.lock.hcl  README.md  build.tf  cloudwatch.tf  eventbridge.tf  lambda.tf  main.tf  outputs.tf  pyproject.toml  terraform.tfvars  variables.tf
.github/workflows/: run-tests-and-upload-code-cov.yml  run-tests-and-upload-code-coverage.yml
scripts/: build_lambda.sh  build_layers.sh
src/: handler.py
src/lib/: bot.py  parser.py
tests/: test_handler.py
tests/lib/: test_bot.py  test_parser.py
